syntax = "proto3";

option csharp_namespace = "MCIO.Demos.Store.Product.WebApi";

package MCIO.Demos.Store.Product.WebApi;

service PingService {
  rpc Ping(PingRequest) returns (PingReply);
}

message PingRequest {

}

message PingReply {

}
